# markdown_sanitize

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release-build-dist.yml
examples/: sample.py
src/markdown_sanitize/: __init__.py  sanitizer.py
tests/: test_sanitizer.py
